--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">AudioManager</string>
     <string name="email_hint">Enter your e-mail address</string>
     <string name="pw_hint">Enter your password</string>
+    <string name="nickname_hint">Enter your nickname</string>
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
     <string name="continue_free">Continue as free user</string>
